# pi-otel-genai

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  Justfile  LICENSE  MODULE.bazel  README.md  TODO.md  bazel-bin  bazel-out  bazel-pi-otel-genai  bazel-testlogs  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json
.claude/skills/stacked-git-workflow/: SKILL.md
.github/: settings.yml
.github/workflows/: changeset-check.yml  ci.yml  cicd.yml  release.yml
docs/: index.md  lifecycle.md  metadoc.md  operations.md  otel-architecture.md  privacy-redaction.md  self-host-local-tailscale.md
examples/: otel-collector.yaml
examples/self-host/: README.md  docker-compose.yaml  otel-collector.yaml  pi-otel.env.example  prometheus.yaml
examples/self-host/grafana/dashboards/: pi-otel-efficiency-decision.json  pi-otel-ops-live.json  pi-otel-overview.json
examples/self-host/grafana/provisioning/alerting/: pi-otel-alert-rules.yaml
examples/self-host/grafana/provisioning/dashboards/: dashboards.yaml
src/: BUILD.bazel  config.test.ts  config.ts  index.test.ts  index.ts  index_vitest_runner.mjs  log.ts  types.ts  vitest_runner.mjs
src/diagnostics/: BUILD.bazel  open-trace-command.test.ts  open-trace-command.ts  status-command.test.ts  status-command.ts  vitest_runner.mjs
src/metrics/: BUILD.bazel  collector.test.ts  collector.ts  provider.ts  vitest_runner.mjs
src/observability/: BUILD.bazel  index.ts  log.ts  log_decorator.test.ts  log_decorator.ts  vitest_runner.mjs
src/privacy/: BUILD.bazel  payload-policy.test.ts  payload-policy.ts  redactor.test.ts  redactor.ts  vitest_runner.mjs
src/trace/: BUILD.bazel  provider.ts  session_node.test.ts  session_node.ts  span-manager.test.ts  span-manager.ts  span_manager.test.ts  span_manager.ts  vitest_runner.mjs
tests/: collector.test.ts  config.test.ts  open-trace-command.test.ts  payload-policy.test.ts  redactor.test.ts  span-manager.test.ts  status-command.test.ts
tools/lint/: BUILD.bazel  linters.bzl
