module(
    name = "pi_otel_genai",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_shell", version = "0.4.1")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
# provides copy_to_bin, used to copy tsconfig into the output tree for Bazel's sandbox
bazel_dep(name = "aspect_bazel_lib", version = "2.19.2")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "aspect_rules_ts", version = "3.8.8")
bazel_dep(name = "aspect_rules_lint", version = "2.5.0")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.18.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    # koffi is a native addon (transitive dep of pi-coding-agent) that tries to
    # compile from source in its install script. Bazel's sandbox strips HOME,
    # causing it to fail. Skip the hook — koffi ships pre-built binaries.
    lifecycle_hooks = {
        "koffi": [],
    },
)
use_repo(npm, "npm")
