load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_test")

ts_project(
    name = "types",
    srcs = ["types.ts"],
    declaration = True,
    tsconfig = "//:tsconfig_build",
    deps = [
        "//:node_modules/@types/node",
    ],
    visibility = ["//visibility:public"],
)

ts_project(
    name = "config",
    srcs = ["config.ts"],
    declaration = True,
    tsconfig = "//:tsconfig_build",
    deps = [
        "//src:types",
        "//:node_modules/@types/node",
    ],
    visibility = ["//visibility:public"],
)

ts_project(
    name = "index",
    srcs = ["index.ts"],
    declaration = True,
    tsconfig = "//:tsconfig_build",
    deps = [
        "//src:config",
        "//src/privacy:privacy",
        "//src/trace:trace",
        "//:node_modules/@mariozechner/pi-coding-agent",
    ],
    visibility = ["//visibility:public"],
)

js_test(
    name = "config_test",
    entry_point = "vitest_runner.mjs",
    data = [
        "config.test.ts",
        "//src:config",
        "//:tsconfig",
        "//:node_modules/vitest",
    ],
)

js_test(
    name = "index_test",
    entry_point = "index_vitest_runner.mjs",
    data = [
        "index.test.ts",
        "index.ts",
        "config.ts",
        "//src:types",
        "//src/trace:trace",
        "//src/observability",
        "//:node_modules/@mariozechner/pi-coding-agent",
        "//:node_modules/@opentelemetry/api",
        "//:node_modules/vitest",
    ],
)
