load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_test")

ts_project(
    name = "observability",
    srcs = [
        "index.ts",
        "log.ts",
        "log_decorator.ts",
    ],
    declaration = True,
    tsconfig = "//:tsconfig_build",
    deps = [
        "//:node_modules/@types/node",
    ],
    visibility = ["//visibility:public"],
)

js_test(
    name = "observability_test",
    entry_point = "vitest_runner.mjs",
    data = [
        "log.ts",
        "log_decorator.ts",
        "log_decorator.test.ts",
        "//:tsconfig",
        "//:node_modules/vitest",
    ],
)
