load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_test")

ts_project(
    name = "trace",
    srcs = [
        "session_node.ts",
        "span_manager.ts",
        "//src:log.ts",
    ],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    visibility = ["//visibility:public"],
)

js_test(
    name = "trace_test",
    entry_point = "vitest_runner.mjs",
    data = [
        "session_node.ts",
        "span_manager.ts",
        "span_manager.test.ts",
        "//src:log.ts",
        "//:node_modules/vitest",
    ],
)
