load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_test")

ts_project(
    name = "trace",
    srcs = [
        "provider.ts",
        "session_node.ts",
        "span_manager.ts",
    ],
    declaration = True,
    tsconfig = "//:tsconfig_build",
    deps = [
        "//src:types",
        "//src/observability",
        "//:node_modules/@mariozechner/pi-coding-agent",
        "//:node_modules/@opentelemetry/api",
        "//:node_modules/@opentelemetry/exporter-trace-otlp-http",
        "//:node_modules/@opentelemetry/resources",
        "//:node_modules/@opentelemetry/sdk-trace-base",
    ],
    visibility = ["//visibility:public"],
)

js_test(
    name = "trace_test",
    entry_point = "vitest_runner.mjs",
    data = [
        "session_node.test.ts",
        "span_manager.test.ts",
        "span-manager.test.ts",
        "//src/trace:trace",
        "//src/observability",
        "//src/privacy:privacy",
        "//:node_modules/@opentelemetry/api",
        "//:node_modules/vitest",
    ],
)
